# cis-matching-tasks

./: .gitignore  NOTICE  README.md  pyproject.toml
R-code/: run_experiments_realdata.R  run_experiments_synthetic.R  run_experiments_synthetic_roc.R  utils.R  utils_roc.R
cimat/: __init__.py  uncertainty_estimator.py
cismat/: mtdata.py  uncertainty_estimator.py
data/: embeddings.json
examples/: jumpstarter.ipynb  morph.ipynb
python-code/: compare_py_vs_r_code.ipynb  morph_tutorial.ipynb  utils.py
tests/: test_uncertainty_estimator.py
